Import cleanup